# solar-hrm

./: .gitattributes  .gitignore  Makefile  README.md  config.json  hrm.py  main.py  preprocessing.py  pyproject.toml
data/00_unprocessed/: Solar_City_Micro_Inverters.csv
notebooks/.ipynb_checkpoints/: data_preprocessing-checkpoint.ipynb
src/: data_preprocessing.py  eda.py  feature_engineering.py  preprocessing.py
src/core.egg-info/: PKG-INFO  SOURCES.txt
src/core/pipeline/: data_preprocessing.py  eda.py  exploratory_data_analysis.py  feature_engineering.py
src/core/utils/: config.py  logger.py  paths.py  pd_config.py  utils.py  validation.py
src/utils/: config.py  config_loader.py  paths.py  pd_config.py  preprocessing_utils.py  utils.py  validation.py
