[project]
name = "core"
version = "0.1.0"
requires-python = ">=3.10"

# Runtime dependencies go here:
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
